...
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/bg_splash_gradient"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMenuTitle"
        style="@style/TextAppearance.PortalNexus.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_24"
        android:layout_marginTop="@dimen/grid_64"
        android:text="@string/main_menu"
...
